@@ -2,7 +2,7 @@ TODO
 * vmdkmount empty array on close not on free
 * add thread-safety in
   - extent_descriptor API functions?
-* check TODO in libvmdk_handle_open_wide regardin UTF-16
+* check TODO in libvmdk_handle_open_wide regarding UTF-16
 
 * add support for the change tracking file?
 * make sure descriptor file data is cleaned on close - also if no data files were set!
@@ -67,6 +67,9 @@ Tests:
   - cowd sparse split
   - compressed (done)
   - (compressed) with parent (done)
+
+20160118
+* worked on fallback inflate implementation
 
 20160111
 * Changes to Python bindings
